--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -3,3 +3,5 @@ $color--liberty: #706fd3;
 $color--white: #fff;
 $color--swan-white: #f7f1e3;
 $color--crocodile-tooth: #d1ccc0;
+$color--chalky: #e2d78a;
+$color--black: #000000;
