--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -5,3 +5,4 @@ $color--swan-white: #f7f1e3;
 $color--crocodile-tooth: #d1ccc0;
 $color--chalky: #e2d78a;
 $color--black: #000000;
+$color--ocean-green: #4CA886;
